--- a/src/l10n.yaml
+++ b/src/l10n.yaml
@@ -4,7 +4,7 @@ en:
   extension.broadcast.send: broadcast message [MESSAGE]
   extension.broadcast.sendName: broadcast named [NAME] message [MESSAGE]
   extension.broadcast.whenReceived: when I receive message
-  extension.broadcast.whenReceivedNamed: when I receive named [NAME] message [MESSAGE]
+  extension.broadcast.whenReceivedNamed: when I receive named [NAME] message
   extension.broadcast.message: hello
   extension.broadcast.messageName: say
   extension.broadcast.received: received message
